--- a/src/main/resources/1.html
+++ b/src/main/resources/1.html
@@ -29,10 +29,10 @@ html, body {
 .price-tag-container {
     position: absolute;
     top: 0%;
-    left: 2%;
-    width: 96%;
-    height: 96%;
-    border: 0.5vmin solid #000; /* 使用vmin单位确保边框比例 */
+    left: 0%;
+    width: 100%;
+    height: 100%;
+    border: 3px solid #000; /* 使用vmin单位确保边框比例 */
     box-sizing: border-box;
     background: #fff;
 }
@@ -40,15 +40,15 @@ html, body {
 /* 促销标签 */
 .promo-label {
     position: absolute;
-    top: 2%;
-    right: 2%;
+    top: 3%;
+    right: 3%;
     background: #f00; /* 红色背景 */
     color: #ff0; /* 黄色文字 */
-    font-size: 3vmin; /* 使用vmin单位 */
+    font-size: 15px; 
     font-weight: bold;
-    padding: 1vmin 2vmin;
+    padding: 5px 10px;
     transform: rotate(15deg);
-    border: 0.3vmin solid #000; /* 黑色边框 */
+    border: 1px solid #000; /* 黑色边框 */
     z-index: 10;
 }
 
@@ -58,7 +58,7 @@ html, body {
     top: 5%;
     left: 0;
     width: 100%;
-    font-size: 5vmin; /* 使用vmin单位 */
+    font-size: 15px; /* 使用vmin单位 */
     font-weight: bold;
     color: #000; /* 黑色 */
     text-align: center;
@@ -68,34 +68,34 @@ html, body {
 /* 价格显示区域 */
 .price-display {
     position: absolute;
-    top: 25%;
+    top: 20%;
     left: 50%;
     transform: translateX(-50%);
     background: #ff0; /* 黄色背景 */
-    border: 1vmin solid #f00; /* 红色边框 */
-    padding: 2vmin 4vmin;
-    border-radius: 3vmin;
+    border: 2px solid #f00; /* 红色边框 */
+    padding: 2px 4px;
+    border-radius: 3px;
     text-align: center;
     white-space: nowrap;
 }
 
 /* 超大价格 */
 .price {
-    font-size: 12vmin; /* 使用vmin单位确保响应式 */
+    font-size: 48px; 
     font-weight: bold;
     color: #f00; /* 红色 */
     line-height: 1;
-    text-shadow: 0.3vmin 0.3vmin 0 #000; /* 黑色阴影增强可读性 */
+    text-shadow: 0.3px 0.3px 0 #000; /* 黑色阴影增强可读性 */
 }
 
 .currency {
-    font-size: 6vmin;
+    font-size: 48px;
     vertical-align: super;
-    margin-right: 1vmin;
+    margin-right: 1px;
 }
 
 .unit {
-    font-size: 5vmin;
+    font-size: 12px;
     color: #000; /* 黑色 */
     font-weight: normal;
 }
@@ -106,7 +106,7 @@ html, body {
     top: 50%;
     left: 0;
     width: 100%;
-    font-size: 4vmin;
+    font-size: 12px;
     color: #000; /* 黑色 */
     text-decoration: line-through;
     text-align: center;
@@ -118,7 +118,7 @@ html, body {
     top: 58%;
     left: 0;
     width: 100%;
-    font-size: 3vmin;
+    font-size: 12px;
     color: #000; /* 黑色 */
     text-align: center;
     padding: 0 5%;
@@ -131,7 +131,7 @@ html, body {
     top: 68%;
     left: 0;
     width: 100%;
-    font-size: 2.5vmin;
+    font-size: 12px;
     color: #000; /* 黑色 */
 }
 
@@ -142,7 +142,7 @@ html, body {
 }
 
 .specs-table td {
-    padding: 0.5vmin 1vmin;
+    padding: 0.5px 1px;
     text-align: left;
 }
 
@@ -158,17 +158,17 @@ html, body {
     left: 0;
     width: 100%;
     text-align: center;
-    font-size: 2.5vmin;
+    font-size: 12px;
     color: #000; /* 黑色 */
 }
 
 .barcode span {
     display: inline-block;
-    padding: 1vmin 2vmin;
+    padding: 1px 2px;
     background: #fff; /* 白色背景 */
-    border: 0.3vmin solid #000; /* 黑色边框 */
+    border: 0.3px solid #000; /* 黑色边框 */
     font-family: "Courier New", monospace;
-    letter-spacing: 0.5vmin;
+    letter-spacing: 0.5px;
     font-weight: bold;
 }
 
@@ -177,7 +177,7 @@ html, body {
     position: absolute;
     bottom: 2%;
     left: 2%;
-    font-size: 2vmin;
+    font-size: 12px;
     font-weight: bold;
     color: #000;
 }
@@ -187,7 +187,7 @@ html, body {
     position: absolute;
     bottom: 2%;
     right: 2%;
-    font-size: 2vmin;
+    font-size: 12px;
     color: #000;
 }
 </style>
