--- a/src/main/resources/2.html
+++ b/src/main/resources/2.html
@@ -13,7 +13,7 @@
             margin: 0;
             padding: 0;
             background-color: #fef9f3;
-            font-family: Arial, Helvetica, sans-serif;
+            font-family: kkyq;
             color: #333;
             text-align: center;
         }
